fix: separar bombardino c e bb nos downloads
